<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="22dp"
    android:paddingRight="15dp"
    android:paddingBottom="22dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/opciones_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textDije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dije"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/opciones_dije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/opciones_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moneda"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/opciones_moneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/limpiar" />

        <Button
            android:id="@+id/button"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:onClick="calcular"
            android:text="@string/calcular" />
    </LinearLayout>

    <TextView
        android:id="@+id/respuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:textAlignment="center"
        android:textSize="24sp" />
</LinearLayout>